# laser-orbit-determination

./: .gitignore  01-EDC-API-example.ipynb  02-orbit-determination-example.ipynb  EDC API example.ipynb  README.md  SLRF2014_POS+VEL_2030.0_180504.snx  SLRF2020_POS+VEL_2023.10.02.snx  ccsdsUtils.py  crdUtils.py  ecc_xyz.snx  environment.yml  ground-stations.csv  od-example.ipynb  slrDataUtils.py  slrFilesUtils.py
orekit-data/: README.md  README.txt  itrf-versions.conf  pyproject.toml  update.sh
orekit-data/CSSI-Space-Weather-Data/: SpaceWeather-All-v1.2.txt
orekit-data/Earth-Orientation-Parameters/IAU-1980/: finals.all
orekit-data/Earth-Orientation-Parameters/IAU-2000/: finals2000A.all
orekit-data/MSAFE/: aug2023f10_prd.txt  dec2023f10-prd.txt  feb2024f10-prd.txt  jan2024f10-prd.txt  jul2023f10_prd.txt  jun2023f10_prd.txt  mar2024f10-prd.txt  nov2023f10-prd.txt  oct2023f10-prd.txt  sep2023f10-prd.txt
